<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/where_to_eat_today"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"/>
    <TextView
            android:text="@string/answer_the_following_questions_and_you_can_find_out_exactly_where_you_want_to_eat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView"/>
    <TextView
            android:text="@string/how_much_time_do_you_have_for_this_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:id="@+id/textView2"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg1"
            android:checkedButton="@id/radioButton"
            >
        <RadioButton
                android:text="@string/_30_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_60_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/not_in_a_hurry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton3" android:layout_weight="1"/>
    </RadioGroup>

    <TextView
            android:text="@string/price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:id="@+id/textView3"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/radioButton21"
            android:id="@+id/rg2"

    >
        <RadioButton
                android:text="@string/under_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton21" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/under_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton22" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/eat_fancy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton23" android:layout_weight="1"/>

    </RadioGroup>

    <TextView
            android:text="@string/accept_foodtrucks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:id="@+id/textView4"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/radioButton31"
            android:id="@+id/rg3"

    >
        <RadioButton
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton31" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton32" android:layout_weight="1"/>

    </RadioGroup>

    <TextView
            android:text="@string/how_are_you_feeling_right_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:id="@+id/textView5"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/radioButton41"
            android:id="@+id/rg4"

    >
        <RadioButton
                android:text="@string/adventurous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton41" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/comfort_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton42" android:layout_weight="1"/>

        <RadioButton
                android:text="Surprise Me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton43" android:layout_weight="1"/>

    </RadioGroup>
    <Button
            android:text="@string/find_restaurants"
            android:textColor="@android:color/holo_green_dark"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/findRestaurant"/>

</LinearLayout>